    Fixed: SQL statement must be prepared once per dump process
    Fixed: Wrong SQL user host (localhost instead of 127.0.0.1)

YOUTRACK
    IP-0931 Unexpected error on protected area creation
    IP-1231 Default SPF DNS resource records should be overrideable
    IP-1365 Check for IPv6 support when installing services
    IP-1395 Domain redirect feature - Missing URL path separator
    IP-1402 ProFTPD doesn't restart properly - killed (signal 15) - Wheezy/Precise/Trusty
    IP-1410 Feature - Possibility to change redirection type
    IP-1509 Could not generate SSL certificate through the frontEnd - Invalide SSL certificate
    IP-1510 VsFTPd - Use of uninitialized value $tmpFile
    IP-1511 Use of uninitialized value $imscpOldConfig{"BASE_SERVER_VHOST"} on fresh install
    IP-1513 Autoreply - Do not autoreply to messages marked as SPAM
    IP-1514 Could not install i-MSCP on Ubuntu Trusty Thar in some contexts
    IP-1525 ifconfig output format has changed in latest versions
    IP-1527 Wrong syntax in the VsFTPd uninstaller, leading to an i-MSCP uninstallation failure
    IP-1530 Nginx - Failed to load resource: net::ERR_INCOMPLETE_CHUNKED_ENCODING
    IP-1533 i-MSCP is not compatible with servers on which IPv6 stack is disabled
    IP-1536 systemd - imscp_daemon service can fail to start/restart
    IP-1539 Default behaviour when adding a MySQL user is counter-intuitive
    IP-1549 RRL implementation for BIND/Named config
    IP-1555 Syntax error in imscp-disable-accounts script
    IP-1557: vsftpd - request failed due to PAM unable to dlopen(pam_mysql.so): /lib/security/pam_mysql.so: undefined
        symbol: make_scrambled_password

------------------------------------------------------------------------------------------------------------------------
Older release series
------------------------------------------------------------------------------------------------------------------------

See ./docs/Changelog-x.x.x files